fix masthead logo on mobile

--- a/assets/src/css/template-parts/masthead/_.scss
+++ b/assets/src/css/template-parts/masthead/_.scss
@@ -109,13 +109,16 @@
 	@media(max-width: map-deep($widths, 'medium')) {
 		& .logo a {
 			background: url("../images/cumulus-logo-blue-icon.svg") no-repeat top left;
+			@at-root body.home & {
+				background: url("../images/cumulus-logo-blue-full.svg") no-repeat top left;
+			}
 		}
 	}
 	&.menu-active .logo a {
 		background: url("../images/cumulus-logo-white-full.svg") no-repeat top left;
 
 		@at-root body.home & {
-			background: url("../images/cumulus-logo-white-full.svg") no-repeat top left;				
+			background: url("../images/cumulus-logo-blue-full.svg") no-repeat top left;				
 		}
 	}
 
